--- a/index.html
+++ b/index.html
@@ -1,106 +1,225 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Basic -->
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Stock Education Hub – Start Learning</title>
-  <meta name="description" content="100% free stock market education. Learn chart reading, technical analysis, and risk management. No buy/sell tips. For learning purpose only.">
-  <link rel="canonical" href="https://example.com/">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Account Recovery & Security</title>
 
-  <!-- Performance -->
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;700&display=swap" rel="stylesheet">
+<style>
+body{
+    margin:0;
+    font-family:Arial,Helvetica,sans-serif;
+    background:#f4f6f8;
+    color:#222;
+}
+.container{
+    padding:15px;
+}
 
-  <!-- Favicons (optional) -->
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>📊</text></svg>">
+/* HERO */
+.hero{
+    background:linear-gradient(135deg,#0f2027,#203a43,#2c5364);
+    color:#fff;
+    padding:30px 15px;
+    border-radius:14px;
+    text-align:center;
+}
+.hero h1{
+    margin:0;
+    font-size:24px;
+}
+.hero p{
+    font-size:15px;
+    opacity:.95;
+    margin-top:8px;
+}
 
-  <!-- Open Graph -->
-  <meta property="og:title" content="Stock Education Hub – Start Learning">
-  <meta property="og:description" content="Learn charts & risk management. No buy/sell tips. 100% educational.">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://example.com/">
-  <meta property="og:image" content="https://images.unsplash.com/photo-1516251193007-45ef944ab0c6?q=80&w=1600&auto=format&fit=crop">
+/* CTA */
+.cta{
+    background:#0a7cff;
+    color:#fff;
+    text-align:center;
+    padding:25px 15px;
+    border-radius:14px;
+    margin:20px 0;
+}
+.cta h2{
+    margin:0;
+    font-size:20px;
+}
+.cta p{
+    font-size:14px;
+    margin:8px 0 15px;
+}
+.cta a{
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    gap:10px;
+    margin:10px 0;
+    padding:14px;
+    font-size:16px;
+    font-weight:bold;
+    border-radius:30px;
+    text-decoration:none;
+    color:#fff;
+}
+.cta a img{
+    width:22px;
+    height:22px;
+}
+.whatsapp{background:#25D366}
+.telegram{background:#0088cc}
 
-  <!-- Minimal CSS (inline for speed) -->
-  <style>
-    :root{
-      --bg1:#0c0c1d;
-      --bg2:#1a1a2b;
-      --brand: #00f0ff;
-      --brand-2:#00f0ff;
-      --text:#ffffff;
-      --muted:#b5b5c3;
-    }
-    *{box-sizing:border-box}
-    html,body{margin:0;padding:0}
-    body{
-      font-family: 'Inter', system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      color:var(--text);
-      background:
-        linear-gradient(135deg, rgba(0,0,0,.45), rgba(0,0,0,.45)),
-        url('https://images.unsplash.com/photo-1516251193007-45ef944ab0c6?q=80&w=1600&auto=format&fit=crop') no-repeat center/cover fixed;
-      -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale;
-      min-height:100vh;
-    }
-    .container{
-      max-width:520px; margin:0 auto; padding:24px 18px; text-align:center; min-height:100vh; display:flex; flex-direction:column; justify-content:center;
-      backdrop-filter: saturate(130%);
-    }
-    .badge{display:inline-block; font-size:.78rem; padding:6px 10px; border:1px solid #2a2a3a; border-radius:999px; color:#d6eaff; background:rgba(0,240,255,.08); margin-bottom:14px}
-    h1{font-size:1.9rem; line-height:1.2; margin:6px 0 10px; background:linear-gradient(90deg,var(--brand-2),var(--brand)); -webkit-background-clip:text; background-clip:text; color:transparent;}
-    .sub{font-size:1rem; color:var(--muted); margin:0 auto 16px; max-width:36ch}
-    .pill{
-      display:inline-flex; align-items:center; gap:8px; padding:8px 12px; border-radius:999px; background:rgba(0,255,153,.07); border:1px dashed rgba(0,255,153,.35); color:#d8ffe9; font-size:.9rem; margin:6px 0 18px;
-    }
-    ul.bullets{list-style:none; padding:0; margin:0 0 18px}
-    ul.bullets li{margin:8px 0; color:#e9eef9}
-    .cta{
-      display:inline-block; text-decoration:none; background:var(--brand); color:#041b14; padding:14px 18px; font-weight:700; border-radius:12px; box-shadow:0 0 0 0 rgba(0,255,153,.6); transform:translateZ(0);
-      transition:transform .15s ease;
-      animation:pulse 1.6s infinite;
-    }
-    .cta:active{transform:scale(.98)}
-    @keyframes pulse{
-      0%{box-shadow:0 0 0 0 rgba(0,255,153,.55)}
-      70%{box-shadow:0 0 0 20px rgba(0,255,153,0)}
-      100%{box-shadow:0 0 0 0 rgba(0,255,153,0)}
-    }
-    .fineprint{font-size:.86rem; color:var(--muted); margin:18px auto 0; max-width:44ch}
-    .disclaimer{font-size:.78rem; color:#9aa4b2; margin:18px auto 0; max-width:50ch}
-    .safe{display:flex; align-items:center; justify-content:center; gap:8px; margin-top:14px; color:#a1ffd6; font-size:.9rem}
-    .shield{width:18px; height:18px; display:inline-block; border-radius:4px; background:linear-gradient(135deg,#0df,#0f9)}
-    footer{opacity:.8; margin-top:22px; font-size:.78rem; color:#9aa4b2}
-  </style>
+/* SECTION */
+.section{
+    background:#fff;
+    padding:20px 15px;
+    border-radius:14px;
+}
+.section h2{
+    margin-top:0;
+    font-size:20px;
+}
+
+/* SERVICES – MOBILE GRID (2 PER ROW) */
+.services-grid{
+    display:grid;
+    grid-template-columns:repeat(2,1fr);
+    gap:15px;
+}
+
+/* SERVICE BOX */
+.service-box{
+    border:1px solid #eee;
+    border-radius:14px;
+    padding:15px 10px;
+    text-align:center;
+    background:#fff;
+}
+.service-box img{
+    width:50px;
+    height:50px;
+    object-fit:contain;
+}
+.service-box h3{
+    font-size:14px;
+    margin:8px 0 4px;
+}
+.price{
+    font-size:14px;
+    font-weight:bold;
+    color:#0a7cff;
+}
+
+/* NOTE & FOOTER */
+.note{
+    font-size:12px;
+    color:#555;
+    text-align:center;
+    margin:15px 0;
+}
+footer{
+    text-align:center;
+    font-size:12px;
+    color:#777;
+    margin:15px 0;
+}
+</style>
 </head>
+
 <body>
-  <main class="container">
-    <span class="badge">100% Educational • Policy Safe</span>
-    <h1>Stock Education Hub – Start Learning</h1>
-    <p class="sub">Master the basics with beginner-friendly lessons</p>
+<div class="container">
 
-    <div class="pill">🚫 No Buy/Sell Tips • ✅ For Learning Purpose Only</div>
+<!-- HERO -->
+<div class="hero">
+    <h1>Welcome My All Customer 
+</h1>
+    <p>Aapko Jo Bhi Hack Karwana Hai Vo Me Karke Dunga Only 10 Minutes Me
+<br>Note ➡️ I Will Take Payment First And then Hack.
+<br>Note ➡️ Advance Payment After Work</p>
+</div>
 
-    <ul class="bullets" aria-label="What you'll learn">
-      <li>• Chart basics & risk rules (no return promises)</li>
-      <li>• How to read trends without speculation</li>
-      <li>• Market discipline & common mistakes</li>
-    </ul>
+<!-- TOP CTA -->
+<div class="cta">
+    <h2>📲 Instant Help</h2>
+    <p>24/7 Support • Limited Slots</p>
 
-    <!-- CTA goes to a page-specific bridge -->
-    <a class="cta" href="bridge-lp24.html" rel="nofollow">Start Learning</a>
+    <a href="https://wa.me/+919376986195" class="whatsapp">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg">
+        WhatsApp Now
+    </a>
 
-    <div class="safe"><span class="shield" aria-hidden="true"></span> Ad Policy Friendly Content</div>
+    <a href="https://t.me/Rahul_Expert" class="telegram">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg">
+        Telegram
+    </a>
+</div>
 
-    <p class="fineprint">We focus on concepts & frameworks suitable for beginners.</p>
-    <p class="disclaimer"><em>This website is for educational purposes only. We do not provide investment, trading, or financial advice.</em></p>
+<!-- SERVICES -->
+<div class="section">
+<h2>💡 Our Services</h2>
 
-    <footer>© <span id="y"></span> Market Basics Learning Hub</footer>
-  </main>
+<div class="services-grid">
 
-  <script>
-    document.getElementById('y').textContent = new Date().getFullYear();
-  </script>
+<div class="service-box">
+<img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg">
+<h3>WhatsApp Hacking</h3>
+<div class="price">₹499</div>
+</div>
+
+<div class="service-box">
+<img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png">
+<h3>Instagram Hacking</h3>
+<div class="price">₹499</div>
+</div>
+
+<div class="service-box">
+<img src="https://upload.wikimedia.org/wikipedia/commons/0/05/Facebook_Logo_%282019%29.png">
+<h3>Facebook Hacking</h3>
+<div class="price">₹499</div>
+</div>
+
+<div class="service-box">
+<img src="https://upload.wikimedia.org/wikipedia/en/c/c4/Snapchat_logo.svg">
+<h3>Snapchat Hacking</h3>
+<div class="price">₹499</div>
+</div>
+
+<div class="service-box">
+<img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Gmail_icon_%282020%29.svg">
+<h3>Gmail Hacking</h3>
+<div class="price">₹499</div>
+</div>
+
+<div class="service-box">
+<img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg">
+<h3>Telegram Hacking</h3>
+<div class="price">₹499</div>
+</div>
+
+</div>
+<div class="service-box">
+<img src="https://upload.wikimedia.org/wikipedia/commons/d/d7/Android_robot.svg">
+<h3>Complete Phone Hacking</h3>
+<div class="price">₹999</div>
+</div>
+
+</div>
+
+<!-- BOTTOM CTA -->
+<div class="cta">
+    <h2>🚀 Need Help Now?</h2>
+    <p>Chat with our expert instantly</p>
+
+    <a href="https://wa.me/+919376986195" class="whatsapp">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg">
+        Chat on WhatsApp
+    </a>
+</div>
+
+
+
+</div>
 </body>
 </html>
